--- a/InvoiceX/MainWindow.xaml
+++ b/InvoiceX/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:InvoiceX"
         mc:Ignorable="d"
         Title="MainWindow" Height="500" Width="800">
-    <Grid>
-        <Frame x:Name="Main" Margin="0,35,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    </Grid>
+    <StackPanel Margin="0,0,0,0">
+        <Frame x:Name="Main"  HorizontalAlignment="Stretch" VerticalAlignment="Stretch" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" NavigationUIVisibility="Hidden"/>
+    </StackPanel>
 </Window>
